tmp.txt
ninja: Entering directory `build'
[1/9] cd /workspaces/scaluq/build/_deps/kokkos-build && /opt/cmake-3.28.0/bin/cmake -DRUN_CHECK_GIT_VERSION=1 -DKOKKOS_SOURCE_DIR=/workspaces/scaluq/build/_deps/kokkos-src -P /workspaces/scaluq/build/_deps/kokkos-src/cmake/build_env_info.cmake
[2/7] Building CXX object exe/CMakeFiles/main.dir/main.cpp.o
FAILED: exe/CMakeFiles/main.dir/main.cpp.o 
/workspaces/scaluq/build/_deps/kokkos-src/bin/kokkos_launch_compiler /workspaces/scaluq/build/_deps/kokkos-src/bin/nvcc_wrapper /usr/bin/g++ /usr/bin/g++ -DJSON_HAS_RANGES=0 -DKOKKOS_DEPENDENCE -DSCALUQ_FLOAT64 -DSCALUQ_USE_CUDA -I/workspaces/scaluq/include -I/workspaces/scaluq/build/_deps/kokkos-build -I/workspaces/scaluq/build/_deps/kokkos-build/core/src -I/workspaces/scaluq/build/_deps/kokkos-src/core/src -I/workspaces/scaluq/build/_deps/kokkos-src/tpls/desul/include -I/workspaces/scaluq/build/_deps/kokkos-src/tpls/mdspan/include -I/workspaces/scaluq/build/_deps/kokkos-build/containers/src -I/workspaces/scaluq/build/_deps/kokkos-src/containers/src -I/workspaces/scaluq/build/_deps/kokkos-build/algorithms/src -I/workspaces/scaluq/build/_deps/kokkos-src/algorithms/src -I/workspaces/scaluq/build/_deps/kokkos-build/simd/src -I/workspaces/scaluq/build/_deps/kokkos-src/simd/src -I/workspaces/scaluq/build/_deps/json-src/include -I/workspaces/scaluq/build/_deps/eigen-src -isystem /usr/local/cuda/targets/x86_64-linux/include -isystem /workspaces/scaluq/build/_deps/googletest-src/googletest/include -isystem /workspaces/scaluq/build/_deps/googletest-src/googletest -std=c++20 -Wall -Wextra -Wunused-parameter -Wsign-compare -Wtype-limits -Wuninitialized -Wno-unknown-pragmas -Wno-deprecated-enum-enum-conversion --expt-relaxed-constexpr -Werror=cross-execution-space-call -DEIGEN_NO_CUDA -pthread -fopenmp -O3 -extended-lambda -Wext-lambda-captures-this -arch=sm_86 -fopenmp -MD -MT exe/CMakeFiles/main.dir/main.cpp.o -MF exe/CMakeFiles/main.dir/main.cpp.o.d -o exe/CMakeFiles/main.dir/main.cpp.o -c /workspaces/scaluq/exe/main.cpp
/workspaces/scaluq/build/_deps/eigen-src/Eigen/src/LU/arch/InverseSize4.h(45): warning #1675-D: unrecognized GCC pragma
  #pragma GCC optimize("no-fast-math")
              ^

Remark: The warnings can be suppressed with "-diag-suppress <warning-number>"

/workspaces/scaluq/exe/main.cpp(23): error: expected a ";"
          std::cout << "Expectation value 2: " << exp2 << std::endl std::cout
                                                                    ^

1 error detected in the compilation of "/workspaces/scaluq/exe/main.cpp".
[3/7] Building CXX object CMakeFiles/scaluq_default_f64.dir/src/operator/operator.cpp.o
[4/7] Building CXX object tests/CMakeFiles/scaluq_test.dir/operator/test_operator.cpp.o
/workspaces/scaluq/build/_deps/eigen-src/Eigen/src/Core/MathFunctions.h(1271): warning #186-D: pointless comparison of unsigned integer with zero
   a >= 0
     ^
          detected during:
            instantiation of "T Eigen::numext::round_down(T, U) [with T=unsigned long, U=int]" at line 136 of /workspaces/scaluq/build/_deps/eigen-src/Eigen/src/Core/InnerProduct.h
            instantiation of "Eigen::internal::inner_product_impl<Evaluator, true>::Scalar Eigen::internal::inner_product_impl<Evaluator, true>::run(const Evaluator &) [with Evaluator=Eigen::internal::inner_product_evaluator<Eigen::internal::scalar_inner_product_op<scaluq::StdComplex, scaluq::StdComplex, true>, Eigen::CwiseUnaryOp<Eigen::internal::scalar_conjugate_op<scaluq::StdComplex>, const Eigen::Block<const Eigen::CwiseUnaryOp<Eigen::internal::scalar_conjugate_op<scaluq::StdComplex>, Eigen::Transpose<const Eigen::Matrix<std::complex<double>, -1, 1, 0, -1, 1>>>, 1, -1, true>>, Eigen::Block<const Eigen::Matrix<std::complex<double>, -1, -1, 0, -1, -1>, -1, 1, true>>]" at line 240 of /workspaces/scaluq/build/_deps/eigen-src/Eigen/src/Core/InnerProduct.h
            instantiation of "Eigen::internal::default_inner_product_impl<Lhs, Rhs, Conj>::result_type Eigen::internal::default_inner_product_impl<Lhs, Rhs, Conj>::run(const Eigen::MatrixBase<Lhs> &, const Eigen::MatrixBase<Rhs> &) [with Lhs=Eigen::CwiseUnaryOp<Eigen::internal::scalar_conjugate_op<scaluq::StdComplex>, const Eigen::Block<const Eigen::CwiseUnaryOp<Eigen::internal::scalar_conjugate_op<scaluq::StdComplex>, Eigen::Transpose<const Eigen::Matrix<std::complex<double>, -1, 1, 0, -1, 1>>>, 1, -1, true>>, Rhs=Eigen::Block<const Eigen::Matrix<std::complex<double>, -1, -1, 0, -1, -1>, -1, 1, true>, Conj=true]" at line 53 of /workspaces/scaluq/build/_deps/eigen-src/Eigen/src/Core/Dot.h
            instantiation of "Eigen::ScalarBinaryOpTraits<Eigen::internal::traits<Derived>::Scalar, Eigen::internal::traits<OtherDerived>::Scalar, Eigen::internal::scalar_product_op<Eigen::internal::traits<Derived>::Scalar, Eigen::internal::traits<OtherDerived>::Scalar>>::ReturnType Eigen::MatrixBase<Derived>::dot(const Eigen::MatrixBase<OtherDerived> &) const [with Derived=Eigen::CwiseUnaryOp<Eigen::internal::scalar_conjugate_op<scaluq::StdComplex>, const Eigen::Block<const Eigen::CwiseUnaryOp<Eigen::internal::scalar_conjugate_op<scaluq::StdComplex>, Eigen::Transpose<const Eigen::Matrix<std::complex<double>, -1, 1, 0, -1, 1>>>, 1, -1, true>>, OtherDerived=Eigen::Block<const Eigen::Matrix<std::complex<double>, -1, -1, 0, -1, -1>, -1, 1, true>]" at line 381 of /workspaces/scaluq/build/_deps/eigen-src/Eigen/src/Core/ProductEvaluators.h
            instantiation of "void Eigen::internal::generic_product_impl<Lhs, Rhs, Eigen::DenseShape, Eigen::DenseShape, 7>::scaleAndAddTo(Dest &, const Lhs &, const Rhs &, const Eigen::internal::generic_product_impl<Lhs, Rhs, Eigen::DenseShape, Eigen::DenseShape, 7>::Scalar &) [with Lhs=Eigen::CwiseUnaryOp<Eigen::internal::scalar_conjugate_op<scaluq::StdComplex>, Eigen::Transpose<const Eigen::Matrix<std::complex<double>, -1, 1, 0, -1, 1>>>, Rhs=Eigen::Matrix<std::complex<double>, -1, -1, 0, -1, -1>, Dest=Eigen::Matrix<std::complex<double>, 1, -1, 1, 1, -1>]" at line 363 of /workspaces/scaluq/build/_deps/eigen-src/Eigen/src/Core/ProductEvaluators.h
            [ 17 instantiation contexts not shown ]
            implicit generation of "testing::internal::TestFactoryImpl<TestClass>::~TestFactoryImpl() noexcept [with TestClass=OperatorTest_CheckExpectationValue_Test<scaluq::TestType<scaluq::Precision::F64, scaluq::ExecutionSpace::Host>>]" at line 738 of /workspaces/scaluq/build/_deps/googletest-src/googletest/include/gtest/internal/gtest-internal.h
            instantiation of class "testing::internal::TestFactoryImpl<TestClass> [with TestClass=OperatorTest_CheckExpectationValue_Test<scaluq::TestType<scaluq::Precision::F64, scaluq::ExecutionSpace::Host>>]" at line 738 of /workspaces/scaluq/build/_deps/googletest-src/googletest/include/gtest/internal/gtest-internal.h
            implicit generation of "testing::internal::TestFactoryImpl<TestClass>::TestFactoryImpl() [with TestClass=OperatorTest_CheckExpectationValue_Test<scaluq::TestType<scaluq::Precision::F64, scaluq::ExecutionSpace::Host>>]" at line 738 of /workspaces/scaluq/build/_deps/googletest-src/googletest/include/gtest/internal/gtest-internal.h
            instantiation of class "testing::internal::TestFactoryImpl<TestClass> [with TestClass=OperatorTest_CheckExpectationValue_Test<scaluq::TestType<scaluq::Precision::F64, scaluq::ExecutionSpace::Host>>]" at line 738 of /workspaces/scaluq/build/_deps/googletest-src/googletest/include/gtest/internal/gtest-internal.h
            instantiation of "__nv_bool testing::internal::TypeParameterizedTest<Fixture, TestSel, Types>::Register(const char *, const testing::internal::CodeLocation &, const char *, const char *, int, const std::vector<std::string, std::allocator<std::string>> &) [with Fixture=OperatorTest, TestSel=testing::internal::TemplateSel<OperatorTest_CheckExpectationValue_Test>, Types=gtest_type_params_OperatorTest_]" at line 72 of /workspaces/scaluq/tests/operator/test_operator.cpp

Remark: The warnings can be suppressed with "-diag-suppress <warning-number>"

ninja: build stopped: subcommand failed.
